# fat

./: .gitignore  README.md  init_github.bat  init_github.sh  pubspec.yaml  test_file.txt  功能——开机自启动Rust实现.md  提示词.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/windcloud/flutter_rust/: MainActivity.java
fat/lib/: main.dart
ios/Runner/: Info.plist
lib/: main.dart  rust_bridge.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
