[package]
name = "fat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-rt = "2.10.0"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.12"